Part-1/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: app-stack
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - image: kennethreitz/httpbin
        imagePullPolicy: Always
        name: auth-service
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi

        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30

        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 90
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: app-stack
  labels:
    app: auth-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: auth-service
