Part-1/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: app-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - image: nginxdemos/hello
        imagePullPolicy: Always
        name: gateway
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 75Mi

        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30

        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 90
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: app-stack
  labels:
    app: gateway
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  selector:
    app: gateway
  type: NodePort
