Part-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: app-stack
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: assessment.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gateway
              port:
                number: 80
